# UA-Course-MIECT

./: .gitignore
1styear/LABI/: git.odt
1styear/LABI/Projeto Labi SERVERS/: Resultados.csv.csv  b64.py  cifradecifra.py  client_tcp.py  common_comm.py  server_tcp.py  tcp_skeleton.py  ~$latorio.odt
1styear/LSD/: Projeto nº15.odp  Projeto.rar  Relatório.odt
1styear/LSD/Aula06/: ShiftRegister_Demo.qpf  ShiftRegister_Demo.qsf  ShiftRegister_Demo.qws  Waveform.vwf
1styear/LSD/Aula07/: Part IV ex1.odt
1styear/LSD/ProjetoF/: ALU.vhd  ALU.vhd.bak  ALU_Tb.vhd  ALU_Tb.vhd.bak  DMemory.vhd  DMemory.vhd.bak  DMemory_Tb.vhd  Reg0.vhd  (+56 more)
1styear/ProgII/: NoInt.java  PROGRAMAÇÃO II.odt  Problema6.java  Prog2ATP1.seb
2ndyear/RC1/: DHCP.pcapng  Ipv6.txt  Nat_estaticovsDinamico.txt  Rc1.txt  Testes_teoricos.rar  ftp.txt  ipv6.pcapng
2ndyear/RC2/: 14_Janeiro_2016_RC2 (1).docx  Applications Models.docx  BGP.docx  Multicast.docx  OT redes2.docx  REDES EXAME 8 setembro 2001.docx  Tuneis.docx  apontamentos.docx  tunnel.pcapng  tunnel_gre.pcapng  tunnel_gre_twoStaticRoutes.pcapng
3rdyear/BaseDados/: README
3rdyear/IA/: teste funções.py
3rdyear/IHC/: Usability test.docx  task1.drawio  task2.drawio  task3.drawio  task4.drawio
3rdyear/SIO/: apontamentos_aula_teorica.txt  ~$mário Executivo.docx
4thYear/CR/: CR_2021-22_ApresentUC.pptx  CR_2021-22_Lecture01.pptx
4thYear/IC/: ic_project3.docx
4thYear/IC/proj2/opencv-example-src/: #Makefile#  AudioCodec.cpp  AudioCodec.hpp  BitStream.cpp  BitStream.hpp  CMakeCache.txt  CMakeLists.txt  Entropy.txt  Golomb.cpp  Golomb.hpp  ImageCodec.cpp  ImageCodec.hpp  Makefile  cmake_install.cmake  copy_image.cpp  ex_2.cpp  restored_img.ppm  resultsSNR.txt  test_audioCodec.cpp  test_audioCodec2.cpp  test_golomb.cpp  test_golomb2.cpp  test_imageCodec.cpp
5thYear/TPR/: DNS_Tunneling.docx  TPR_escolha_projeto.docx
(+1947 files in other folders)
